--- a/eos_libraries/fc/visual_studio/fc/fc.vcxproj
+++ b/eos_libraries/fc/visual_studio/fc/fc.vcxproj
@@ -72,27 +72,27 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(BOOST_ROOT);$(OPENSSL_ROOT_DIR)/include;$(C_INCLUDE)/secp256k1/include;$(C_INCLUDE)/gmp/include;$(ProjectDir)../../include/;$(IncludePath)</IncludePath>
+    <IncludePath>$(BOOST_ROOT);$(OPENSSL_ROOT_DIR)/include;$(C_INCLUDE)/secp256k1/include;$(C_INCLUDE)/gmp/include;$(ProjectDir)../../vendor/websocketpp;$(ProjectDir)../../include/;$(IncludePath)</IncludePath>
     <LibraryPath>$(BOOST_LIBRARYDIR);$(OPENSSL_ROOT_DIR)/lib;$(C_INCLUDE)/secp256k1/lib;$(C_INCLUDE)/gmp/lib;$(LibraryPath)</LibraryPath>
-    <OutDir>$(SolutionDir)/lib</OutDir>
+    <OutDir>$(SolutionDir)/lib/</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(BOOST_ROOT);$(OPENSSL_ROOT_DIR)/include;$(C_INCLUDE)/secp256k1/include;$(C_INCLUDE)/gmp/include;$(ProjectDir)../../include/;$(IncludePath)</IncludePath>
+    <IncludePath>$(BOOST_ROOT);$(OPENSSL_ROOT_DIR)/include;$(C_INCLUDE)/secp256k1/include;$(C_INCLUDE)/gmp/include;$(ProjectDir)../../vendor/websocketpp;$(ProjectDir)../../include/;$(IncludePath)</IncludePath>
     <LibraryPath>$(BOOST_LIBRARYDIR);$(OPENSSL_ROOT_DIR)/lib;$(C_INCLUDE)/secp256k1/lib;$(C_INCLUDE)/gmp/lib;$(LibraryPath)</LibraryPath>
-    <OutDir>$(SolutionDir)/lib</OutDir>
+    <OutDir>$(SolutionDir)/lib/</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(BOOST_ROOT);$(OPENSSL_ROOT_DIR)/include;$(C_INCLUDE)/secp256k1/include;$(C_INCLUDE)/gmp/include;$(ProjectDir)../../include/;$(IncludePath)</IncludePath>
+    <IncludePath>$(BOOST_ROOT);$(OPENSSL_ROOT_DIR)/include;$(C_INCLUDE)/secp256k1/include;$(C_INCLUDE)/gmp/include;$(ProjectDir)../../vendor/websocketpp;$(ProjectDir)../../include/;$(IncludePath)</IncludePath>
     <LibraryPath>$(BOOST_LIBRARYDIR);$(OPENSSL_ROOT_DIR)/lib;$(C_INCLUDE)/secp256k1/lib;$(C_INCLUDE)/gmp/lib;$(LibraryPath)</LibraryPath>
-    <OutDir>$(SolutionDir)/lib</OutDir>
+    <OutDir>$(SolutionDir)/lib/</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(BOOST_ROOT);$(OPENSSL_ROOT_DIR)/include;$(C_INCLUDE)/secp256k1/include;$(C_INCLUDE)/gmp/include;$(ProjectDir)../../include/;$(IncludePath)</IncludePath>
+    <IncludePath>$(BOOST_ROOT);$(OPENSSL_ROOT_DIR)/include;$(C_INCLUDE)/secp256k1/include;$(C_INCLUDE)/gmp/include;$(ProjectDir)../../vendor/websocketpp;$(ProjectDir)../../include/;$(IncludePath)</IncludePath>
     <LibraryPath>$(BOOST_LIBRARYDIR);$(OPENSSL_ROOT_DIR)/lib;$(C_INCLUDE)/secp256k1/lib;$(C_INCLUDE)/gmp/lib;$(LibraryPath)</LibraryPath>
-    <OutDir>$(SolutionDir)/lib</OutDir>
+    <OutDir>$(SolutionDir)/lib/</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -100,7 +100,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions);_WIN32_WINNT=0x0501</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions);_WIN32_WINNT=0x0501;_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -113,7 +113,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions);_WIN32_WINNT=0x0501</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions);_WIN32_WINNT=0x0501;_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -128,7 +128,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions);_WIN32_WINNT=0x0501</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions);_WIN32_WINNT=0x0501;_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -145,7 +145,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_LIB;%(PreprocessorDefinitions);_WIN32_WINNT=0x0501</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_LIB;%(PreprocessorDefinitions);_WIN32_WINNT=0x0501;_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -155,6 +155,81 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\aes.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\asn1.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\asn1t.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\asn1_mac.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\bio.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\blowfish.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\bn.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\buffer.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\camellia.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\cast.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\cmac.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\cms.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\comp.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\conf.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\conf_api.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\crypto.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\des.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\des_old.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\dh.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\dsa.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\dso.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\dtls1.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\ebcdic.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\ec.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\ecdh.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\ecdsa.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\engine.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\err.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\evp.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\e_os2.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\hmac.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\idea.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\krb5_asn.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\kssl.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\lhash.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\md4.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\md5.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\mdc2.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\modes.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\objects.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\obj_mac.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\ocsp.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\opensslconf.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\opensslv.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\ossl_typ.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\pem.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\pem2.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\pkcs12.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\pkcs7.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\pqueue.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\rand.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\rc2.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\rc4.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\ripemd.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\rsa.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\safestack.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\seed.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\sha.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\srp.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\srtp.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\ssl.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\ssl2.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\ssl23.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\ssl3.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\stack.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\symhacks.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\tls1.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\ts.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\txt_db.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\ui.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\ui_compat.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\whrlpool.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\x509.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\x509v3.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\x509_vfy.h" />
     <ClInclude Include="..\..\include\fc\actor.hpp" />
     <ClInclude Include="..\..\include\fc\aligned.hpp" />
     <ClInclude Include="..\..\include\fc\any.hpp" />
@@ -263,6 +338,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\applink.c" />
     <ClCompile Include="..\..\src\compress\smaz.cpp" />
     <ClCompile Include="..\..\src\compress\zlib.cpp" />
     <ClCompile Include="..\..\src\crypto\aes.cpp" />
@@ -312,6 +388,7 @@
     <ClCompile Include="..\..\src\string.cpp" />
     <ClCompile Include="..\..\src\time.cpp" />
     <ClCompile Include="..\..\src\uint128.cpp" />
+    <ClCompile Include="..\..\src\utf8.cpp" />
     <ClCompile Include="..\..\src\variant.cpp" />
     <ClCompile Include="..\..\src\variant_object.cpp" />
   </ItemGroup>
