--- a/eos_libraries/visual_studio/test/test.vcxproj.filters
+++ b/eos_libraries/visual_studio/test/test.vcxproj.filters
@@ -16,6 +16,9 @@
     <Filter Include="Header Files\secp256k1">
       <UniqueIdentifier>{51446cf8-11e4-44c1-92ad-3c0cc2a00774}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\openssl">
+      <UniqueIdentifier>{73345906-3fb1-42c8-a0b0-c5e9ae06aa58}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="targetver.h">
@@ -24,10 +27,238 @@
     <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\secp256k1\include\secp256k1.h">
       <Filter>Header Files\secp256k1</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\aes.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\asn1.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\asn1_mac.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\asn1t.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\bio.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\blowfish.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\bn.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\buffer.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\camellia.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\cast.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\cmac.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\cms.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\comp.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\conf.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\conf_api.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\crypto.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\des.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\des_old.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\dh.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\dsa.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\dso.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\dtls1.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\e_os2.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\ebcdic.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\ec.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\ecdh.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\ecdsa.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\engine.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\err.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\evp.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\hmac.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\idea.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\krb5_asn.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\kssl.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\lhash.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\md4.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\md5.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\mdc2.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\modes.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\obj_mac.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\objects.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\ocsp.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\opensslconf.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\opensslv.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\ossl_typ.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\pem.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\pem2.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\pkcs7.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\pkcs12.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\pqueue.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\rand.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\rc2.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\rc4.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\ripemd.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\rsa.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\safestack.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\seed.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\sha.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\srp.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\srtp.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\ssl.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\ssl2.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\ssl3.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\ssl23.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\stack.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\symhacks.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\tls1.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\ts.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\txt_db.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\ui.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\ui_compat.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\whrlpool.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\x509.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\x509_vfy.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\x509v3.h">
+      <Filter>Header Files\openssl</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="test.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\..\C_INCLUDE\OpenSSL\Win64OpenSSL-1_0_2L\include\openssl\applink.c">
+      <Filter>Header Files\openssl</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
