--- a/teos/programs/teos/teos_config.h.in
+++ b/teos/programs/teos/teos_config.h.in
@@ -4,5 +4,8 @@
 #define VERSION_MAJOR @VERSION_MAJOR@
 #define VERSION_MINOR @VERSION_MINOR@
 #define CONFIG_JSON @CONFIG_JSON@
-#define LOGGING_DIR @LOGGING_DIR@ 
+#define LOGGING_DIR @LOGGING_DIR@
+#define TEST_ADDRESS @TEST_ADDRESS@
+#define TEST_HOST @TEST_HOST@
+#define TEST_PORT @TEST_PORT@
 
