--- a/teos/programs/teos/teoslib/CMakeLists.txt
+++ b/teos/programs/teos/teoslib/CMakeLists.txt
@@ -1,6 +1,10 @@
 
 set(LIB_NAME "teoslib")
 add_library(${LIB_NAME} STATIC 
+  teos_command.hpp 
+  teos_get_commands.hpp 
+  teos_wallet_commands.hpp
+  teos_create_commands.hpp
   teos_command.cpp 
   teos_get_commands.cpp
   teos_wallet_commands.cpp
@@ -10,18 +14,13 @@ add_library(${LIB_NAME} STATIC
   )
 
 target_include_directories( ${LIB_NAME} 
-  PUBLIC
-  ${Boost_INCLUDE_DIR}
-  ${HELPER_INCLUDE}
-  include
-  ${CMAKE_SOURCE_DIR}/teos_helper/include
-)
+  PRIVATE
+    ${Boost_INCLUDE_DIR}
 
-target_link_libraries( ${LIB_NAME}
   PUBLIC
-  teos_helper
-  ${Boost_LIBRARIES}
-  ${CMAKE_THREAD_LIBS_INIT}
+    ${HELPER_INCLUDE}
+    include
+    ${CMAKE_SOURCE_DIR}/teos_helper/include
 )
 
 install ( TARGETS ${LIB_NAME} DESTINATION lib )
