--- a/teos/teos_helper/CMakeLists.txt
+++ b/teos/teos_helper/CMakeLists.txt
@@ -1,11 +1,12 @@
 set( LIB_NAME "teos_helper")
 
 add_library( ${LIB_NAME} STATIC
+  include/teos_helper.hpp
   teos_helper.cpp
 )
 
 target_include_directories( ${LIB_NAME} 
-  PUBLIC
+  PRIVATE
     ${Boost_INCLUDE_DIR}
     ${OPENSSL_INCLUDE_DIR}
     ../libraries/fc/include
@@ -18,46 +19,11 @@ target_include_directories( ${LIB_NAME}
 
 if( NOT EOS_ECC_IMPL STREQUAL openssl )
   target_include_directories( ${LIB_NAME}
-    PUBLIC
+    PRIVATE
       ${SECP256K1_INCLUDE_DIR}
       ${GMP_INCLUDE_DIR}
   )
 endif()
-
-target_link_libraries( ${LIB_NAME}
-  PUBLIC
-    ${Boost_LIBRARIES} 
-    ${OPENSSL_LIBRARIES}
-
-  PUBLIC
-    fc
-    eos_types
-    eos_utilities
-)
-
-if( NOT EOS_ECC_IMPL STREQUAL openssl )
-  target_link_libraries( ${LIB_NAME}
-    PUBLIC
-      ${SECP256K1_LIBRARIES}
-      ${GMP_LIBRARIES}
-  )
-endif()
-
-if( WIN32 )
-  if( NOT EOS_ECC_IMPL STREQUAL openssl )
-    target_link_libraries( ${LIB_NAME}
-      PUBLIC
-        ${SECP256K1_LIBRARIES_DIR}/gcc.lib
-    )
-  endif()
-
-  target_link_libraries( ${LIB_NAME}
-    PUBLIC
-      "$(WindowsSDK_LibraryPath)/x64/crypt32.lib"
-      "$(VC_ReferencesPath_VC_x64)/legacy_stdio_definitions.lib"
-      "Userenv.lib"
-  )
-endif( WIN32 )
 
 install( DIRECTORY include DESTINATION . )
 install(
